Scalar fix for codegenmodule jinja template
All parameters were being treated as matrices in the template code that copies values into the parameter structure. For scalar parameters, this was causing the parameter value itself to be passed in as the first argument to memcpy instead of a pointer. Added an if clause to handle scalar parameters separately.

--- a/cvxpy_codegen/templates/codegenmodule.c.jinja
+++ b/cvxpy_codegen/templates/codegenmodule.c.jinja
@@ -65,8 +65,12 @@ static PyObject *solve_wrapper(PyObject *self, PyObject *args){
 
   /* Copy parameter values into the parameter structure. */
   {% for p in named_params %}
+    {% if p.is_scalar %}
+  memcpy(&params.{{ p.name }}, PyArray_DATA({{ p.name }}), {{ p.size[0]*p.size[1] }}*sizeof(double));
+    {% else %}
   // memcpy(params.{{ p.name }}, {{ p.name }}->data, {{ p.size[0]*p.size[1] }}*sizeof(double));
   memcpy(params.{{ p.name }}, PyArray_DATA({{ p.name }}), {{ p.size[0]*p.size[1] }}*sizeof(double));
+    {% endif %}
   {% endfor %}
 
 
